--- a/style.css
+++ b/style.css
@@ -88,6 +88,8 @@ section {
   display: flex;
   align-items: center;
   justify-content: center;
+  opacity: 1;
+  transform: translateY(0);
 }
 
 h1, h2, h3 {
